# rdvb-os-linux

./: Cargo.toml  README.md
src/: devices.rs  error.rs  lib.rs
src/demux/: data.rs  functions.rs  ioctl.rs  mod.rs
src/frontend/: data.rs  functions.rs  ioctl.rs  mod.rs  property.rs
src/frontend/queries/: get.rs  mod.rs  set.rs
