[package]
name = "rdvb-os-linux"
description = "Linux-specific things for DVB"
repository = "https://github.com/MarimeGui/rdvb-os-linux"
authors = ["MarimeGui <lepro.guillaume@gmail.com>"]
keywords = ["dvb"]
categories = ["os::linux-apis", "multimedia"]
readme = "README.md"
license = "Unlicense"
version = "0.1.0"
edition = "2024"

[dependencies]
enum-from-discriminant-derive = "1.0.0"
nix = { version = "0.30.1", features = ["ioctl"] }
thiserror = "2.0.16"
